--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,29 +30,16 @@
             "deviceId": "linux"
         },
         {
-            "name": "小米10s",
-            "request": "launch",
-            "type": "dart",
-            "deviceId": "M2102J2SC"
-        },
-        {
-            "name": "小米12s",
-            "request": "launch",
-            "type": "dart",
-            "deviceId": "2206123SC"
-        },
-        {
-            "name": "小米12s-个人",
-            "request": "launch",
-            "type": "dart",
-            "deviceId": "2206123SC",
-            "program": "lib/main_personal.dart",
-        },
-        {
             "name": "小米平板5 12.4",
             "request": "launch",
             "type": "dart",
             "deviceId": "22081281AC"
+        },
+        {
+            "name": "小米平板6 PRO",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "23046RP50C"
         },
         {
             "name": "OPPO WATCH",
