--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,14 +3,23 @@
     // 悬停以查看现有属性的描述。
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
-            "name": "Web",
-            "type": "dart",
+    "configurations": [
+        {
+            "name": "Chrome",
             "request": "launch",
-            "program": "lib/main.dart",
-            "deviceId": "chrome"
+            "type": "dart",
+            "deviceId": "chrome",
+            "args": [
+                "--web-renderer",
+                "html"
+            ]
         },
-
+        {
+            "name": "Linux",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "linux"
+        },
         {
             "name": "Mac Desktop",
             "request": "launch",
@@ -24,34 +33,22 @@
             "deviceId": "windows"
         },
         {
-            "name": "Linux",
+            "name": "小米14",
             "request": "launch",
             "type": "dart",
-            "deviceId": "linux"
+            "deviceId": "23127PN0CC",
         },
         {
-            "name": "小米平板5 12.4",
+            "name": "魅族21",
             "request": "launch",
             "type": "dart",
-            "deviceId": "22081281AC"
+            "deviceId": "MEIZU 21",
         },
         {
-            "name": "小米平板6 PRO",
+            "name": "小米平板6",
             "request": "launch",
             "type": "dart",
             "deviceId": "23046RP50C"
-        },
-        {
-            "name": "OPPO WATCH",
-            "request": "launch",
-            "type": "dart",
-            "deviceId": "cc004251"
-        },
-        {
-            "name": "小米13",
-            "request": "launch",
-            "type": "dart",
-            "deviceId": "2211133C"
         },
     ]
 }
